--- a/Blogy.WebUI/Areas/Admin/Views/Users/Index.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/Users/Index.cshtml
@@ -1,69 +1,74 @@
-﻿@model List<ResultBlogDto>
+﻿@model List<Blogy.Business.DTOs.UserDtos.ResultUserDto>
 @{
-    ViewData["Title"] = "Bloglar";
+    ViewData["Title"] = "Kullanıcılar";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="midde_cont">
     <div class="container-fluid">
+
         <div class="row column_title">
             <div class="col-md-12">
                 <div class="page_title">
-                    <h2>Blog Listesi</h2>
+                    <h2>Kullanıcı Listesi</h2>
                 </div>
             </div>
         </div>
 
-        <div class="row column1">
-            <div class="col-md-12">
-                <div class="white_shd full margin_bottom_30">
-                    <div class="full graph_head">
-                        <div class="heading1 margin_0">
-                            <h3>Bloglar</h3>
-                        </div>
-                    </div>
-                    <div class="full table_section padding_infor_info">
-                        <div class="table-responsive-sm">
-                            <table class="table table-striped table-hover">
-                                <thead class="thead-dark">
-                                    <tr>
-                                        <th>#</th>
-                                        <th>Blog Başlığı</th>
-                                        <th>Açıklama</th>
-                                        <th>Kategori</th>
-                                        <th>İşlemler</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @{
-                                        int count = 0;
-                                    }
-                                    @foreach (var item in Model)
-                                    {
-                                        count++;
-                                        <tr>
-                                            <td>@count</td>
-                                            <td>
-                                                <img src="@item.CoverImage" style="height:50px;width:50px;border-radius:6px;margin-right:10px;" />
-                                                @item.Title
-                                            </td>
-                                            <td>@(item.Description.Length > 100 ? item.Description.Substring(0, 100) + "..." : item.Description)</td>
-                                            <td>@item.Category.CategoryName</td>
-                                            <td>
-                                                <a href="/Admin/Blog/UpdateBlog/@item.Id" class="btn btn-sm btn-info">Güncelle</a>
-                                                <a href="/Admin/Blog/DeleteBlog/@item.Id" class="btn btn-sm btn-danger" onclick="return confirm('Silmek istediğine emin misin?')">Sil</a>
-                                            </td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="full padding_infor_info">
-                        <a href="/Admin/Blog/CreateBlog" class="btn btn-success">+ Yeni Blog Oluştur</a>
-                    </div>
+        <div class="white_shd full margin_bottom_30">
+            <div class="full graph_head">
+                <div class="heading1 margin_0">
+                    <h3>Kullanıcılar</h3>
                 </div>
             </div>
+
+            <div class="full table_section padding_infor_info">
+                <div class="table-responsive-sm">
+                    <table class="table table-striped table-hover">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>#</th>
+                                <th>Ad Soyad</th>
+                                <th>Kullanıcı Adı</th>
+                                <th>Email</th>
+                                <th>Roller</th>
+                                <th>İşlemler</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            @{
+                                int i = 1;
+                            }
+
+                            @foreach (var user in Model)
+                            {
+                                <tr>
+                                    <td>@i</td>
+                                    <td>@user.FullName</td>
+                                    <td>@user.UserName</td>
+                                    <td>@user.Email</td>
+                                    <td>
+                                        @foreach (var role in user.Roles)
+                                        {
+                                            <span class="badge bg-info text-dark">@role</span>
+                                        }
+                                    </td>
+                                    <td>
+                                        <a href="/Admin/Users/AssignRole/@user.Id" class="btn btn-sm btn-warning">
+                                            Rol Ata
+                                        </a>
+                                    </td>
+                                </tr>
+                                i++;
+                            }
+                        </tbody>
+
+                    </table>
+                </div>
+            </div>
+
         </div>
+
     </div>
 </div>
