--- a/Blogy.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/Blogy.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -87,9 +87,24 @@
                                 <i class="fa fa-comments yellow_color"></i> <span>Yorumlar</span>
                             </a>
                         </li>
+                        <li>
+                            <a asp-area="Admin" asp-controller="About" asp-action="Index">
+                                <i class="fa fa-info-circle blue1_color"></i> <span>Hakkımızda</span>
+                            </a>
+                        </li>
 
                         <li>
-                            <a asp-controller="Account" asp-action="Logout">
+                            <a asp-area="Admin" asp-controller="Role" asp-action="Index">
+                                <i class="fa fa-comments yellow_color"></i> <span>Rol Atama</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a asp-area="Admin" asp-controller="Users" asp-action="Index">
+                                <i class="fa fa-comments yellow_color"></i> <span>Kullanıcılar</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a asp-controller="Login" asp-action="Index">
                                 <i class="fa fa-sign-out red_color"></i> <span>Çıkış Yap</span>
                             </a>
                         </li>
