--- a/Blogy.WebUI/Views/Blog/Detail.cshtml
+++ b/Blogy.WebUI/Views/Blog/Detail.cshtml
@@ -72,7 +72,7 @@
                     <p>
                         Kategori:
                         <a href="#">
-                            @Model.Category.CategoryName
+                            @Model.Category.Name    
                         </a>
                     </p>
                 </div>
