--- a/Blogy.WebUI/Views/Shared/Components/DefaultBlogs/Default.cshtml
+++ b/Blogy.WebUI/Views/Shared/Components/DefaultBlogs/Default.cshtml
@@ -10,7 +10,7 @@
 
             <div class="row mb-4">
                 <div class="col-sm-6">
-                    <h2 class="posts-entry-title">@category.CategoryName</h2>
+                    <h2 class="posts-entry-title">@category.Name</h2>
                 </div>
                 <div class="col-sm-6 text-sm-end">
                     <a href="/Blog/GetBlogsByCategory/@category.Id" class="read-more">Tümünü Gör</a>
