--- a/Blogy.WebUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/Category/Index.cshtml
@@ -24,7 +24,7 @@
         count++;
         <tr>
             <th>@count</th>
-            <td>@item.CategoryName</td>
+            <td>@item.Name</td>
             <td>
                 <a href="/Admin/Category/DeleteCategory/@item.Id" class="btn btn-danger">Sil</a>
                 <a href="/Admin/Category/UpdateCategory/@item.Id" class="btn btn-info">Güncelle</a>
