--- a/Blogy.WebUI/Views/Shared/Components/CategoryListSidebar/Default.cshtml
+++ b/Blogy.WebUI/Views/Shared/Components/CategoryListSidebar/Default.cshtml
@@ -8,7 +8,7 @@
             <li>
                 <a href="/Blog/GetBlogsByCategory/@category.Id">
                     @category.Name
-                    <span>(@category.Blogs.Count)</span>
+                    <span>(@(category.Blogs?.Count ?? 0))</span>
                 </a>
             </li>
         }
