--- a/Blogy.WebUI/Views/Blog/Index.cshtml
+++ b/Blogy.WebUI/Views/Blog/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using PagedList.Core
 @using PagedList.Core.Mvc
-@model PagedList<ResultBlogDto>
+@model IPagedList<ResultBlogDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/UILayout/Index.cshtml";
@@ -28,23 +28,31 @@
         <div class="row posts-entry">
             <div class="col-lg-8">
 
-                @foreach (var item in Model)
+                @if (!Model.Any())
                 {
-
-
-                    <div class="blog-entry d-flex blog-entry-search-item">
-                        <a href="single.html" class="img-link me-4">
-                            <img src="@item.CoverImage" alt="Image" class="img-fluid">
-                        </a>
-                        <div>
-                            <span class="date">@item.CreatedDate &bullet; <a href="#">@item.Category.Name</a></span>
-                            <h2><a href="single.html">@item.Title</a></h2>
-                            <p>@(item.Description.Length > 100 ? item.Description.Substring(0, 100) + "..." : item.Description)</p>
-                            <p><a href="/Blog/BlogDetails/@item.Id" class="btn btn-sm btn-outline-primary">Devamını Oku</a></p>
-                        </div>
-                    </div>
+                    <div class="alert alert-info">Henüz blog yazısı bulunamadı.</div>
                 }
-
+                else
+                {
+                    @foreach (var item in Model)
+                    {
+                        <div class="blog-entry d-flex blog-entry-search-item">
+                            <a href="/Blog/Detail/@item.Id" class="img-link me-4">
+                                <img src="@item.CoverImage" alt="@item.Title" class="img-fluid">
+                            </a>
+                            <div>
+                                <span class="date">
+                                    @item.CreatedDate.ToString("dd MMM yyyy") &bullet;
+                                    <a href="/Blog/GetBlogsByCategory/@item.CategoryId">@item.Category?.Name</a>
+                                </span>
+                                <h2><a href="/Blog/Detail/@item.Id">@item.Title</a></h2>
+                                <p>@(item.Description.Length > 140 ? item.Description.Substring(0, 140) + "..." : item.Description)</p>
+                                <p><a href="/Blog/Detail/@item.Id" class="btn btn-sm btn-outline-primary">Devamını Oku</a></p>
+                            </div>
+                        </div>
+                   
+                }
+                }
 
                 <div class="row text-start pt-5 border-top">
                     <div class="col-md-12">
@@ -62,78 +70,13 @@
                         <input type="text" class="form-control" id="s" placeholder="Type a keyword and hit enter">
                     </form>
                 </div>
-                <!-- END sidebar-box -->
-                <div class="sidebar-box">
-                    <h3 class="heading">Popular Posts</h3>
-                    <div class="post-entry-sidebar">
-                        <ul>
-                            <li>
-                                <a href="">
-                                    <img src="images/img_1_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-                                    <div class="text">
-                                        <h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-                                        <div class="post-meta">
-                                            <span class="mr-2">March 15, 2018 </span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="images/img_2_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-                                    <div class="text">
-                                        <h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-                                        <div class="post-meta">
-                                            <span class="mr-2">March 15, 2018 </span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="images/img_3_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-                                    <div class="text">
-                                        <h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-                                        <div class="post-meta">
-                                            <span class="mr-2">March 15, 2018 </span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+
+                @await Component.InvokeAsync("BlogsByCategoryLatestBlogs")
                 <!-- END sidebar-box -->
 
-                <div class="sidebar-box">
-                    <h3 class="heading">Categories</h3>
-                    <ul class="categories">
-                        <li><a href="#">Food <span>(12)</span></a></li>
-                        <li><a href="#">Travel <span>(22)</span></a></li>
-                        <li><a href="#">Lifestyle <span>(37)</span></a></li>
-                        <li><a href="#">Business <span>(42)</span></a></li>
-                        <li><a href="#">Adventure <span>(14)</span></a></li>
-                    </ul>
-                </div>
-                <!-- END sidebar-box -->
+                <hr />
 
-                <div class="sidebar-box">
-                    <h3 class="heading">Tags</h3>
-                    <ul class="tags">
-                        <li><a href="#">Travel</a></li>
-                        <li><a href="#">Adventure</a></li>
-                        <li><a href="#">Food</a></li>
-                        <li><a href="#">Lifestyle</a></li>
-                        <li><a href="#">Business</a></li>
-                        <li><a href="#">Freelancing</a></li>
-                        <li><a href="#">Travel</a></li>
-                        <li><a href="#">Adventure</a></li>
-                        <li><a href="#">Food</a></li>
-                        <li><a href="#">Lifestyle</a></li>
-                        <li><a href="#">Business</a></li>
-                        <li><a href="#">Freelancing</a></li>
-                    </ul>
-                </div>
+                @await Component.InvokeAsync("CategoryListSidebar")
 
             </div>
         </div>
