--- a/Blogy.WebUI/Views/_ViewImports.cshtml
+++ b/Blogy.WebUI/Views/_ViewImports.cshtml
@@ -3,5 +3,8 @@
 @using Blogy.Business.DTOs.CategoryDtos
 @using Blogy.Business.DTOs.BlogDtos
 @using Blogy.Business.DTOs.UserDtos
+@using Blogy.Business.DTOs.AboutDtos
+@using System.Linq
+@using PagedList.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, PagedList.Core.Mvc
